M3-105: app is now packaged with jlink/jpackage