@@ -1,40 +1,71 @@
 plugins {
   id 'application'
-  id 'org.openjfx.javafxplugin' version '0.0.7'
-  id "org.beryx.jlink" version "2.6.5"
+  id 'com.adarshr.test-logger' version '2.0.0'
+  id 'org.openjfx.javafxplugin' version '0.0.8'
+  id "org.beryx.jlink" version "2.17.3"
+  id "org.javamodularity.moduleplugin" version "1.5.0"
+  id "com.github.ben-manes.versions" version "0.28.0"
 }
 
 version = "0.2.0"
 
-//sourceCompatibility = JavaVersion.VERSION_11
+sourceCompatibility = 11
+targetCompatibility = 11
 
 repositories {
     jcenter()
     mavenCentral()
     maven {url 'http://dl.bintray.com/jerady/maven'}
     maven {url 'http://dl.bintray.com/hohonuuli/maven' }
+    maven {url 'http://dl.bintray.com/org-mbari/maven' }
 }
 
 javafx {
-    modules = [ 'javafx.controls', 'javafx.media', 'javafx.fxml', 'javafx.swing']
+    version = "14"
+    modules = [ 
+        'javafx.base',
+        'javafx.controls',
+        'javafx.fxml',
+        'javafx.graphics', 
+        'javafx.media', 
+        'javafx.swing'
+    ]
 }
 
-def mbarix4j = '1.10.0'
-def vcr4j = '4.0.2'
+def runtimeJvmArgs = [
+        '-Xms1g',
+        '--add-exports', 'javafx.base/com.sun.javafx.binding=com.jfoenix',
+        '--add-exports', 'javafx.base/com.sun.javafx.event=com.jfoenix',
+        '--add-exports', 'javafx.controls/com.sun.javafx.scene.control.behavior=com.jfoenix',
+        '--add-exports', 'javafx.controls/com.sun.javafx.scene.control=com.jfoenix',
+        '--add-exports', 'javafx.graphics/com.sun.javafx.stage=com.jfoenix'
+]
+
+test {
+    moduleOptions {
+        runOnClasspath = true
+    }
+    testlogger {
+        theme 'mocha' // task level
+    }
+}
+
+def vcr4j = "4.3.2.jre11"
 dependencies {
     implementation 'io.reactivex.rxjava2:rxjavafx:2.2.2'
-    implementation 'org.slf4j:slf4j-api:1.7.25'
-    implementation "com.jfoenix:jfoenix:9.0.8"
-    //implementation "de.jensd:fontawesomefx-commons:11.0"
-    //implementation "de.jensd:fontawesomefx-materialicons:2.2.0-11"
-    implementation "org.kordamp.ikonli:ikonli-javafx:11.1.0"
-    implementation 'org.kordamp.ikonli:ikonli-material-pack:11.1.0'
-    implementation "org.mbari:mbarix4j:${mbarix4j}"
+    implementation 'org.kordamp.ikonli:ikonli-material-pack:11.3.5'
+    implementation 'org.slf4j:slf4j-api:1.8.0-beta4'
+    implementation "com.jfoenix:jfoenix:9.0.9"
+    implementation "org.kordamp.ikonli:ikonli-javafx:11.3.5"
+    implementation "org.mbari:mbarix4j:2.0.5.jre11"
     implementation "org.mbari.vcr4j:vcr4j-core:${vcr4j}"
     implementation "org.mbari.vcr4j:vcr4j-sharktopoda:${vcr4j}"
-    implementation 'org.slf4j:slf4j-api:1.7.25'
     implementation "uk.co.caprica:vlcj:3.10.1"
-    runtime 'ch.qos.logback:logback-classic:1.2.3'
+    runtimeOnly('ch.qos.logback:logback-classic:1.3.0-alpha4')  {
+        exclude group: 'javax.activation'
+    }
+    runtimeOnly 'javax.servlet:javax.servlet-api:4.0.1'
+    runtimeOnly 'org.fusesource.jansi:jansi:1.18'
     testImplementation 'junit:junit:4.12'
 }
 
@@ -42,6 +73,7 @@ dependencies {
 mainClassName = 'jsharktopoda/org.mbari.m3.jsharktopoda.javafx.JSharktopoda'
 application {
     mainClassName = mainClassName
+    applicationDefaultJvmArgs = runtimeJvmArgs
 }
 
 
@@ -52,27 +84,40 @@ jar {
     }
 }
 
-def java_home = System.getenv('JAVA_HOME')
-task link(type: Exec) {
-    dependsOn 'clean'
-    dependsOn 'jar'
-
-    workingDir 'build'
-
-    commandLine "${java_home}/bin/jlink", '--module-path', "libs${File.pathSeparatorChar}${java_home}/jmods",
-            '--add-modules', 'jsharktopoda', '--launcher', 'jsharktopoda=jsharktopoda/org.mbari.m3.jsharktopoda.javafx.JSharktopoda', '--output', 'dist', '--strip-debug',
-            '--compress', '2', '--no-header-files', '--no-man-pages'
-}
 
 jlink {
-  mergedModule {
-        requires 'javafx.controls'
-        requires 'javafx.media'
-        requires 'javafx.fxml'
-        requires 'javafx.swing'
-  }
+
     options = ['--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages']
-    launcher{
+    
+    launcher {
         name = 'jsharktopoda'
+    }
+
+    addExtraDependencies("javafx")
+
+    jpackage {
+        jpackageHome = System.getenv("JPACKAGE_HOME")
+
+        def customInstallerOptions = [
+                "--copyright", "Monterey Bay Aquarium Research Institute",
+                "--vendor", "org.mbari",
+                "--app-version", project.version
+        ]
+
+        if  (org.gradle.internal.os.OperatingSystem.current().isLinux()) {
+            installerType = "deb"
+        }
+        else if (org.gradle.internal.os.OperatingSystem.current().isWindows()) {
+            installerType = "msi"
+        }
+        else {
+            installerType = "dmg"
+            customInstallerOptions.addAll([
+                "--mac-package-name", "jsharktopoda",
+                "--mac-package-identifier", project.name
+            ])
+        }
+        installerOptions = customInstallerOptions
+
     }
 }
